# ort-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  VERSIONS.md
.github/workflows/: release.yml
docs/: UPGRADING-ORT.md
src/: main.cpp
test/: check_deps.py  smoke.py
test/fixtures/: make_golden.py  make_tiny_pad.py  make_tiny_roberta_tok.py  make_tiny_tok.py
test/fixtures/tiny-clf/: config.json  manifest.json  model.onnx  tokenizer.json  tokenizer_config.json
test/fixtures/tiny-pad/: config.json  golden.json  tokenizer.json
test/fixtures/tiny-roberta-tok/: config.json  golden.json  manifest.json  model.onnx  tokenizer.json  tokenizer_config.json
test/fixtures/tiny-tok/: config.json  golden.json  model.onnx  vocab.txt
tools/classifier_catalog/: .gitignore  export.py  export_and_benchmark.py  publish.py
